# Garita

./: LICENSE  README.md
.github/workflows/: release.yml
src/: app.js  garita.css  index.html  xietiao.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  model.rs  todoist.rs
src/assets/sounds/: 78. Time Up.flac  LEEME.txt  syncend.flac
