[package]
name = "xietiao-desktop"
version = "0.1.0"
edition = "2021"
description = "Xietiao — dashboard de productividad de escritorio (Tauri + system.css)"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[profile.release]
strip = true
lto = true
